@@ -87,7 +87,7 @@ def run(feeds, args):
                             interval = interval
                         ))
                         _time.sleep(interval)
-                    feed.run(send=args.send)
+                    feed.run(send=args.send, clean=args.clean)
                 except _error.RSS2EmailError as e:
                     e.log()
                 last_server = current_server
