@@ -15,6 +15,7 @@ UNRELEASED
       $XDG_DATA_HOME
     * Warnings about HTTP content-type being unexpected now properly display
     * Make the proxy parameter also affect https connections
+    * Add a --clean argument on the run command to reduce the database size
 
 v3.12.2 (2020-08-31)
     * Fix bug `AttributeError: 'NoneType' object has no attribute 'close'` (#126)
